# SalmonApp

./: .gitignore  Cargo.toml  EMAIL-CALENDAR-PLAN.md  GOAL.md  HANDOVER-FOR-CODEX.md  OAUTH-SETUP.md  PRD.md  README.md  chat-order-mockups.html  home-redesign-mockup.html  icon-candidates.html  logo-mockup.html  mockup-button-system-v2.html  mockup-button-system.html  mockup-global-ai-button.html  mockup.html  rail-icons-mockup.html  settings-mockup.html
.github/workflows/: release-desktop.yml  release.yml
crates/salmon-core/: Cargo.toml
crates/salmon-core/src/: db.rs  lib.rs  path_dirs.rs  platform.rs
crates/salmon-desktop/: package-lock.json  package.json
crates/salmon-desktop/packaging/: salmon-brightness  salmon-desktop-doctor  salmon-display-profile-init  salmon-input-toggle  salmon-open-browser  salmon-open-files  salmon-open-terminal  salmon-screenshot  salmon-session  salmon-session-action  salmon-shell.desktop  swaylock.conf
crates/salmon-desktop/packaging/labwc-config/: autostart  environment  menu.xml  rc.xml
crates/salmon-desktop/packaging/waybar/: tray.css  tray.jsonc
crates/salmon-desktop/packaging/xdg-desktop-portal/: salmonapp-portals.conf
crates/salmon-desktop/src/: App.tsx  main.tsx  styles.css
crates/salmon-desktop/src-tauri/: Cargo.toml  oauth_config.toml.example  tauri.conf.json
crates/salmon-desktop/src-tauri/capabilities/: default.json
crates/salmon-desktop/src-tauri/icons/: icon.icns
crates/salmon-desktop/src-tauri/src/: briefing.rs  briefing_llm.rs  briefing_orchestrator.rs  calendar.rs  calendar_pulse.rs  commands.rs  contacts.rs  cross_link.rs  db.rs  engine.rs  event_extractor.rs  gmail.rs  gmail_send.rs  graph.rs  lib.rs  llm.rs  mail_commands.rs  mail_sync.rs  main.rs  oauth_config.rs  rubric.rs  task_extractor.rs  task_pulse.rs  tasks.rs  types.rs  writer.rs
crates/salmon-desktop/src/components/: AppWindowTitleBar.tsx  ChatStream.tsx  ComposeModal.tsx  ContactsView.tsx  LeftSidebar.tsx  MailView.tsx  NewTopicDialog.tsx  Onboarding.tsx  RelatedMailList.tsx  RightPane.tsx  SearchDialog.tsx  TasksView.tsx  ToolCallCard.tsx  WelcomeBack.tsx
crates/salmon-desktop/src/components/desktop/: DesktopTopBar.tsx  DesktopView.tsx  Launcher.tsx  Wallpaper.tsx
crates/salmon-desktop/src/components/desktop-shell/: AILiveTile.tsx  AIPeek.tsx  AIPopover.tsx  ActivitiesOverview.tsx  DesktopView.tsx  Dock.tsx  Icons.tsx  Launcher.tsx  ShortcutsOverlay.tsx  TipsTicker.tsx  TopBar.tsx  Wallpaper.tsx  WelcomeOverlay.tsx  Widget.tsx  desktop.css
crates/salmon-desktop/src/lib/: api.ts  format.ts  openAppWindow.ts  platform.ts  useDesktopBrief.ts
docs/: SESSION-HANDOFF-2026-05-17.md  index.html  salmon-desktop-linux-baseline-audit.md
docs/archive/mockups/: HOMEPAGE-MOCKUP.html  OAUTH-SETUP.html  TASKS-PLACEMENT-MOCKUP.html  V0.11-LAYOUT-MOCKUP.html  V0.11-RAIL-OPTIONS.html  email-calendar-mockup.html  mockup-button-system-iter1.html  mockup-button-system-iter2.html  mockup-button-system-v3.html  mockup-search-icons.html
docs/phase3-compositor/: COMPILE-STATUS-2026-05-17.md  LABWC-PACKAGE-VERIFY-2026-05-18.md  README.md  wayland-protocols.md
docs/phase3-compositor/packaging/: debian.md
docs/phase3-compositor/session/: salmon-shell.desktop
docs/phase3-compositor/skeleton/: Cargo.toml  README.md
docs/phase3-compositor/skeleton/src/: handlers.rs  input.rs  main.rs  nested.rs  render.rs  state.rs  tty.rs  ui_layer.rs
docs/phase3-compositor/skeleton/src/handlers/: compositor.rs  data_device.rs  decoration.rs  dmabuf.rs  foreign_toplevel.rs  keyboard_shortcuts.rs  layer_shell.rs  mod.rs  output.rs  scaling.rs  screencopy.rs  seat.rs  shell.rs  shm.rs  text_input.rs  xwayland.rs
docs/refactor-three-products/: README.md
salmon/: index.html  package-lock.json  package.json
salmon/src/: App.tsx  styles.css
salmon/src-tauri/: Cargo.toml  oauth_config.toml.example  tauri.conf.json
salmon/src-tauri/capabilities/: default.json
salmon/src-tauri/src/: briefing_commands.rs  briefing_orchestrator.rs  calendar.rs  commands.rs  contacts.rs  cross_pulse.rs  date_context.rs  db.rs  engine.rs  event_extractor.rs  graph_send.rs  lib.rs  llm.rs  mail_commands.rs  mail_sync.rs  main.rs  microsoft.rs  oauth.rs  oauth_config.rs  permission_bridge.rs  pulse.rs  roost.rs  rubric.rs  task_extractor.rs  task_pulse.rs  tasks.rs  types.rs
salmon/src/components/: BriefingFeed.tsx  CalendarView.tsx  ChatStream.tsx  CodeBlock.tsx  ComposeModal.tsx  Composer.tsx  ContactsView.tsx  GlobalAIButton.tsx  IconRail.tsx  LeftSidebar.tsx  MailView.tsx  NewTopicDialog.tsx  Onboarding.tsx  PermissionCard.tsx  PromptDialog.tsx  RelatedMailList.tsx  RightPane.tsx  SalmonLogo.tsx  SearchDialog.tsx  SettingsDialog.tsx  TasksView.tsx  Toasts.tsx  ToolCallCard.tsx  WelcomeBack.tsx
salmon/src/components/desktop/: BriefWidget.tsx  DesktopTopBar.tsx  DesktopView.tsx  Dock.tsx  Wallpaper.tsx
salmon/src/components/desktop-shell/: Icons.tsx  Launcher.tsx  TopBar.tsx  Widget.tsx  desktop.css
salmon/src/lib/: api.ts  notify.ts  openAppWindow.ts  types.ts
scripts/: build-deb.sh  verify-deb.sh
