# Workspace root for the SalmonApp mail app.
#
# Members:
#   - salmon/src-tauri    → the SalmonApp binary (Mac + Linux App)
#   - crates/salmon-core  → shared backend (db, types, platform) the App depends on
#
# The Linux Desktop Shell / Wayland compositor line ("Salmon Gnome") used to
# live here too; it now has its own repo: https://github.com/pekinlcc/Salmon_Gnome
#
# Cargo's shared target directory lives at `/target/` (workspace root).
[workspace]
members = [
    "salmon/src-tauri",
    "crates/salmon-core",
]
resolver = "2"
