[package]
name = "salmon"
version = "0.5.3"
description = "Salmon — desktop client driving local Claude Code / Codex CLI (Linux + macOS)"
authors = ["Salmon"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "salmon_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
anyhow = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
which = "6"
log = "0.4"
env_logger = "0.11"
zip = { version = "2", default-features = false, features = ["deflate"] }
base64 = "0.22"
axum = { version = "0.7", default-features = false, features = ["tokio", "http1", "json", "matched-path"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
