[package]
name = "salmonapp"
version = "0.10.4"
description = "SalmonApp — desktop client driving local Claude Code / Codex CLI (Linux + macOS)"
authors = ["SalmonApp"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "salmonapp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
anyhow = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
which = "6"
log = "0.4"
env_logger = "0.11"
zip = { version = "2", default-features = false, features = ["deflate"] }
base64 = "0.22"
axum = { version = "0.7", default-features = false, features = ["tokio", "http1", "json", "matched-path", "query"] }
libc = "0.2"
# v0.9.0-alpha.2: OAuth + Gmail API client.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
url = "2"
toml = "0.8"
sha2 = "0.10"
rand = "0.8"
hex = "0.4"
urlencoding = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
